[gd_scene load_steps=5 format=3 uid="uid://farm_plot_node"]

[ext_resource type="Script" path="res://scripts/systems/farming/FarmPlotNode.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://soil_placeholder" path="res://icon.svg" id="2_tex"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(64, 64)

[sub_resource type="CanvasTexture" id="CanvasTexture_1"]

[node name="FarmPlotNode" type="Area2D"]
script = ExtResource("1_script")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="SoilSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_tex")

[node name="CropSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -10)
scale = Vector2(0.8, 0.8)

[node name="SelectionSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.3)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_tex")
